--- a/node/src/views/home.ejs
+++ b/node/src/views/home.ejs
@@ -79,7 +79,8 @@
                 </div> 
                 <div class="row align-items-center py-5">
                     <div class="col text-center text-white">
-                        <p>asdjksdaksadkl</p>
+                        <p>Progetto realizzato per i corsi di Linguaggi e Tecnologie per il Web e Reti di Calcolatori.</p>
+                        <p>-  Alessandro Ricci  -  Claudio Chini  -  Simone Tablo' -</p>
                     </div>
                 </div> 
             </div>
@@ -197,7 +198,8 @@
             </div> 
             <div class="row align-items-center py-5">
                 <div class="col text-center text-white">
-                    <p><code class="text-white">asdjksdaksadkl</code></p>
+                    <p>Progetto realizzato per i corsi di Linguaggi e Tecnologie per il Web e Reti di Calcolatori.</p>
+                    <p>-  Alessandro Ricci  -  Claudio Chini  -  Simone Tablo' -</p>
                 </div>
             </div> 
         </div>
