--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -97,9 +97,9 @@
                 </div>
                 <div id="days"><%if(id){for(const day of itinerary.data){%><div class="day"><div class="date d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
-                            <input type="date" class="input_style_sm my-1" oninput="getForecast(this)"><div class="text-start" onclick="showNotForecastPopup(this)" onmouseleave="hideNotForecastPopup(this)">
+                            <input type="date" class="input_style_sm my-1 date_elem" oninput="forecast_aux(this)"><div class="text-start" onclick="showNotForecastPopup(this)" onmouseleave="hideNotForecastPopup(this)">
                                 <i class="fa-solid fa-circle-exclamation mx-2"></i>
-                                <span class="not_forecastPopup" style="visibility: hidden;">Previsioni Meteo non disponibili per questa data</span>
+                                <span class="not_forecastPopup" style="visibility: hidden;">Enter a date to know the weather forecast</span>
                             </div>
                         </div>
                         <button type='button' onclick=removeDay(this) class='removeDay input_style_sm'><i class="fa-solid fa-x"></i></button>
