--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -22,10 +22,9 @@
             <a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
 
             <ul class="navbar-nav px-5">
-
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
-                    <ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
+                    <ul class="dropdown-menu mt-2">
                         <li>
                             <div class="dropdown-item card bg-dark text-white">
                                 <div class="card-header">
@@ -33,14 +32,12 @@
                                     <p class="card-text"><%=email%></p>
                                 </div>
                                 <div class="card-body d-grid gap-3">
-                                    <button type="button" class="btn btn-primary input_style_sm btn-block">Settings</button>
                                     <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </li>
-
             </ul>
 
         </div>
