implementate code amqp per singolo utente

--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -29,6 +29,9 @@
                             <div class="dropdown-item card bg-dark text-white">
                                 <div class="card-header">
                                     <h4 class="card-title"><%=username%></h4>
+                                    <script>
+                                        var username = "<%=username%>"
+                                     </script>
                                     <p class="card-text"><%=email%></p>
                                 </div>
                                 <div class="card-body d-grid gap-3">
