--- a/node/src/views/form.ejs
+++ b/node/src/views/form.ejs
@@ -258,9 +258,9 @@
 					get_url = base_url+ '/api/itineraries?'+ query_string;
 					$.get(get_url, (res)=>{			
 						res.data.forEach((itinerary, i) =>{ 
-							title = itinerary.value.title;
-							author = itinerary.value.author;
-							tags = itinerary.value.tags;
+							title = itinerary.title;
+							author = itinerary.author;
+							tags = itinerary.tags;
 							html_tags = "";
 							for (const tag of tags) { 
 								if(tag=="architecture") html_tags+='<i class="fa-solid tag_color_architecture fa-archway" style="padding-left:3px"></i>';
