--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -10,19 +10,32 @@
     <script src="../libraries/bootstrap.min.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
     <script type="text/javascript" src="https://opentripmap.io/js/directory.en.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css"/>
     <script src="https://kit.fontawesome.com/285899448d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles/style.css"/>
     
 <body>
-
     <nav class="navbar navbar-expand fixed-top bg-dark justify-content-center">
         <div class="container-fluid">
-
             <a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
-
+            <ul class="navbar-nav px-5 ms-auto">
+                <li class="nav-item dropdown">
+                    <a id="bell" class="nav-link text-white px-5" href="" role="button" data-bs-toggle="dropdown">
+                        <i class="fa-regular fa-bell fa-lg"><div class=badge>0</div></i>
+                    </a>
+                    <ul class="dropdown-menu mt-2">
+                        <li>
+                            <div class="dropdown-item card bg-dark text-white">
+                                <div id="notifications" class="card-header">
+                                    
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
             <ul class="navbar-nav px-5">
-
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
                     <ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
@@ -30,19 +43,19 @@
                             <div class="dropdown-item card bg-dark text-white">
                                 <div class="card-header">
                                     <h4 class="card-title"><%=username%></h4>
+                                    <script>
+                                        var username = "<%=username%>"
+                                     </script>
                                     <p class="card-text"><%=email%></p>
                                 </div>
                                 <div class="card-body d-grid gap-3">
-                                    <button type="button" class="btn btn-primary input_style_sm btn-block">Settings</button>
                                     <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
                                 </div>
                             </div>
                         </li>
                     </ul>
                 </li>
-
             </ul>
-
         </div>
     </nav>
     <div id="container">
@@ -94,6 +107,7 @@
                   </div>
                 <button id="create" type="button" class="input_style_sm"><i class="fa-solid fa-circle-plus"></i></button>
                 <span id="searchBar"><input id="place" type="text" class="input_style_sm" name="Place"><button type="submit" class="input_style_sm" id="search" onclick=search(this)><i class="fa-solid fa-magnifying-glass"></i></button></span>
+                <button id="like" type="button" class="input_style_sm" onclick="like(this)"><i class="fa-regular fa-heart"></i></button>
                 </div>
                 <div id="days"><%if(id){for(const day of itinerary_data){%><div class="day"><div class="date d-flex justify-content-between align-items-center">
                         <div class="d-flex align-items-center">
@@ -105,8 +119,7 @@
                         <button type='button' onclick=removeDay(this) class='removeDay input_style_sm'><i class="fa-solid fa-x"></i></button>
                         <button value='off' type='button' onclick=showPOI(this) class='showBtn input_style_sm'><i class='fa-solid fa-eye'></i></button>
                         </div><%for(const pois of day.plan){ tag = tags.pop(); info = data.pop(); name=info.name ; info_s=JSON.stringify(info)%><div class="poi" value="<%=info_s%>" draggable="true" style="border-left-color:<%=tag%>;"><div class="name"><%=name%></div><button onclick='this.parentElement.remove()' class='remove btn btn-light'><i class='fa-solid fa-trash-can fa-lg'></i></button><button onclick=clonePOI(this) class='clone btn btn-light'><i class='fa-solid fa-plus fa-lg'></i></button><button onclick=showInfo(this) class='infobtn btn btn-light'><i class='fa-solid fa-circle-info fa-lg'></i></button></div><%}%></div>
-                <%}}%></div>
-                
+                <%}}%></div>  
             </div>
     </div>
     <script src="../js/app.js"></script>
