--- a/nginx/static/styles/style.css
+++ b/nginx/static/styles/style.css
@@ -1,10 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700;800&display=swap');
-
-*{
-  font-family : 'Poppins', sans-serif
-}
-
-
 html,
 
 :root{
@@ -62,10 +55,6 @@ body{
     box-shadow: 0 0 5px rgba(0,0,0,0.5);
 }
 
-.mapboxgl-ctrl-logo {
-    display: none !important;
-}
-
 #buttons{
 
     text-align: center;
@@ -96,7 +85,7 @@ body{
     height: 50%;
     width: 99%;
     border-radius:10px;
-    margin-bottom: 7px;
+    margin-top: 7px;
     box-shadow: 2px 2px 5px rgb(82, 82, 82);
     overflow-y: auto;
     background: #f6f6f4;
@@ -163,8 +152,7 @@ body{
 
 #commands{
     position: relative;
-    margin-bottom: 7px;
-    margin-top: 3px;
+    margin: 7px;
 }
 
 #send{
@@ -179,16 +167,14 @@ body{
 }
 #searchBar{
     max-width: 280px;
-    white-space: nowrap;
 }
 #search{
     background-color: transparent;
     border-color: transparent;
-    display:inline-block;
+
 }
 #place{
     max-width: 230px;
-    display:inline-block;
 }
 
 #add{
@@ -210,12 +196,6 @@ body{
     transition: 0.2s;
     text-align: center;
     border-radius: 5px;
-}
-
-#like{
-    position: relative;
-    float:right;
-    visibility: hidden;
 }
 
 .info{
@@ -294,6 +274,7 @@ body{
   color:#6610f2;
 }
 
+
 .tag_color_inactive{
   color: #adb5bd;
 }
@@ -301,6 +282,7 @@ body{
     border:solid 1px;
     border-radius:5px;
 }
+
 
 .showBtn{
     width: 1%;
@@ -330,7 +312,7 @@ body{
     position:absolute;
     transform: translate(0, -50%);
     font-size: 100%;
-    right: 50px;
+    right: 8%
 }
 
 .w-icon{
@@ -466,55 +448,6 @@ body{
       right:8px;
   }
 
-  .dropdown-menu{
-    background-color: rgb(50, 50, 50, 0.3);
-  }
-  
-  .dropdown-item > .card-header{
-    max-width: 170px;
-  }
-  
-  .dropdown-menu{
-    background-color: rgb(50, 50, 50, 0.3);
-  }
-  
-  .dropdown-item > .card-header{
-    max-width: 170px;
-  }
-    
-  .card-title{
-    font-size:80%; 
-    overflow-x: scroll;
-    overflow-y: hidden; 
-  }
-  
-  
-  .card-text{
-    font-size:80%; 
-    overflow-x: scroll;
-  }
-
-  #bell{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .fa-bell{
-    position: relative;
-    display: block;
-  }
-  .badge{
-    position: absolute;
-    border-radius: 50%;
-    background: red;
-    color: white;
-    aspect-ratio: 1/1;
-    width: 17px;
-    bottom:1px;
-    font-size: 13px;
-    padding: 2px;
-    visibility: hidden;
-  }
-
 @media only screen and (min-width:1600px){
     #left, #center, #right{
         width: 33.33%;
@@ -522,10 +455,7 @@ body{
         float: right;
     }
     .day{ height: 25%;}
-    #commands{ 
-        margin-top: 14px;
-        height: 4%;
-    }
+    #commands{ height: 4%;}
     #days{ height: 94%;}
     #container{
         height: 94%;
@@ -544,7 +474,7 @@ body{
         background-size: 85%;
     }
     #center{
-        /*background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);*/
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
         background-size: 70%;
         background-repeat: no-repeat;
         background-position: center;
@@ -574,7 +504,7 @@ body{
     }
     #container{overflow: hidden;}
     #center{
-        /*background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);*/
+        background-image: url(./icons/vecteezy_grid-globe-map_1198029.png);
         background-size: 36%;
         background-repeat: no-repeat;
         background-position:center;
@@ -582,11 +512,5 @@ body{
     .info{ 
         height:35vh;
         margin-left: 8px;
-    }
-}
-
-@media only screen and (max-width:390px){
-    #place{
-        margin-top: 5px;
     }
 }
