--- a/node/src/views/form.ejs
+++ b/node/src/views/form.ejs
@@ -1,7 +1,3 @@
-<!-- Da questa pagina è possibile accedere all'editor di itinerari (planner.ejs) creandone di nuovi o modificando itinerari condivisi da altri utenti -->
-<!-- E' possibile filtrare gli itinerari per tipologia di punti di interesse -->
-<!-- La ricerca di itinerari e i filtri sono gestiti dallo script form.js -->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -13,7 +9,6 @@
         <script src="../libraries/bootstrap.min.js"></script>
         <script src="../libraries/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/285899448d.js" crossorigin="anonymous"></script>
-		<script src="../js/form.js"></script>
 
         <link rel="stylesheet" href="../styles/style_form.css">
     </head>
@@ -21,27 +16,39 @@
         
         <nav class="navbar navbar-expand fixed-top bg-dark justify-content-center">
 			<div class="container-fluid">
+
 				<a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
+
 				<ul class="navbar-nav px-5">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
-                        <ul class="dropdown-menu mt-2">
-                            <li>
-                                <div class="dropdown-item card bg-dark text-white">
-                                    <div class="card-header">
-                                        <h4 class="card-title"><%=username%></h4>
-                                        <p class="card-text"><%=email%></p>
-                                    </div>
-                                    <div class="card-body d-grid gap-3">
-                                        <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
+						<ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
+							<li>
+								<div class="dropdown-item card bg-dark text-white">
+									<div class="card-header">
+										<h4 class="card-title"><%=username%></h4>
+										<p class="card-text"><%=email%></p>
+										<p class="card-text"><%=api_key%></p>
+										<script>
+											var username = "<%=username%>"
+											var api_key = "<%=api_key%>"
+										</script>
+									</div>
+									<div class="card-body d-grid gap-3">
+										<button type="button" class="btn btn-primary input_style_sm btn-block">Settings</button>
+										<button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</li>
+
+				</ul>
+
 			</div>
 		</nav>
+
 
 
     	<div class="content">
@@ -51,11 +58,19 @@
     	    <img class="background_image" src="../media/form_images/image.png">
 		
     	    <div class="container d-flex justify-content-center h-100">
+			
     	        <div class=" text-white">
+				
     	            <form action="" method="GET" id="form">
-    	                <div class="row my-5"></div>
-						<div class="row my-4"></div>
+					
+    	                <div class="row my-5">
+						
+    	                </div>
+						<div class="row my-4">
+						
+    	                </div>
     	                <div class="row align-items-center mx-2">
+						
 						
     	                    <div class="col-xl d-flex justify-content-center align-items-center">
     	                        <div class="my-3 text-center px-3">
@@ -73,7 +88,9 @@
     	                            </div>
     	                        </div>
     	                    </div>
-											
+						
+						
+						
     	                    <div class=" col-xl d-flex justify-content-center align-items-center">
     	                        <div class="card card_menu bg-opacity-10  my-3 text-center" >
     	                            <div class="card-body">
@@ -106,6 +123,7 @@
     	                                        <input type="checkbox"  name="religion" hidden>
     	                                        <i class="fa-solid fa-hands-praying"></i>
     	                                    </button>
+    	                                    <!-- <button type="button" class="tag_all" id="all"><i class="fa-solid fa-shuffle"></i></i></button> -->
     	                                </fieldset>
     	                            </div>
     	                        </div>
@@ -117,32 +135,40 @@
     	                                <h4 class="m-0 text-uppercase" id="tag_label" style="opacity: 0;">architecture</h4>
     	                            </div>
     	                        </div> 
-    	                    </div>	
+    	                    </div>
+						
+
     	                </div>
 
-    	            	<div class="row">
-    	            	    <div class="d-flex col-sm align-items-center justify-content-center">
-    	            	        <div class="card card_menu text-center">
-    	            	            <div class="card-body">                             
-    	            	                <input class="input_style button mt-0 btn btn-primary" type="submit" value="search">   
-    	            	            </div>
-    	            	        </div>
-    	            	    </div>
-    	            	</div>
-    	            </form>
-
-    	            <div class="row">
-    	                <div class="d-flex col-sm align-items-center justify-content-center">
-    	                    <div class="card card_menu text-center">
-    	                        <div class="card-body">    
-									<a href="../planner"><button class="input_style mx-2 mb-2 btn btn-primary">new</button></a>                         
-    	                             
+    	                <div class="row">
+    	                    <div class="d-flex col-sm align-items-center justify-content-center">
+    	                        <div class="card card_menu text-center">
+    	                            <div class="card-body">                             
+    	                                <input class="input_style button mt-0 btn btn-primary" type="submit" value="search">   
+    	                            </div>
     	                        </div>
     	                    </div>
     	                </div>
-    	            </div>
+
+    	            </form>
+				
+    	                <div class="row">
+    	                    <div class="d-flex col-sm align-items-center justify-content-center">
+    	                        <div class="card card_menu text-center">
+    	                            <div class="card-body">    
+										<a href="../planner"><button class="input_style mx-2 mb-2 btn btn-primary">new</button></a>                         
+    	                                 
+    	                            </div>
+    	                        </div>
+    	                    </div>
+    	                </div>
+					
+
     	        </div>
+
     	    </div>
+
+		
     	</div>
 	
     	<section class="d-flex flex-column bg-dark justify-content-center align-items-center m-3">
@@ -162,5 +188,112 @@
 			</div>
 
     	</section>
+
+
+
+		<script>
+			var base_url = window.location.origin;
+		
+			$(window).on('load', function(){
+
+				$("#logout_button").click(function(){
+					$.post(base_url + "/logout",()=>{ 
+						window.location = base_url; 
+					});
+				});	
+		
+				$("#all").on('click', (event)=>{
+					target = event.target;
+					target.classList.toggle("active");
+					if(target.classList.contains("active")){
+						$(".tag").trigger('click')
+					}
+					else{
+						$(".tag").trigger('click')
+					}
+				});
+
+				$(".tag").on('click', (event)=>{
+					target = event.target;
+					if(!target.classList.contains("tag")){
+						target = target.parentNode;
+					}
+					$(".background_image").attr("src", "../media/form_images/"+target.id+"_image.png");
+		
+					if(target.classList.length == 2){
+						target.classList.remove(target.classList[1]);
+						target.childNodes[1].checked = false;
+						console.log(target.childNodes[1].value);
+					}
+					else{
+					target.classList.add("tag_color_"+ target.id);
+					target.childNodes[1].checked = true;
+					console.log(target.childNodes[1]);
+					}
+				});
+		
+				$(".tag").on('mouseleave', (event)=>{
+					target = event.target;
+					if(!target.classList.contains("tag")){
+						target = target.parentNode;
+					}
+					//$(".background_image").attr("src", "images/image.png");
+					$("#tag_label").css("opacity", "0");
+				})
+		
+				$(".tag").on('mouseover', (event)=>{
+					target = event.target;
+					if(!target.classList.contains("tag")){
+						target = target.parentNode;
+					}
+					$(".background_image").attr("src", "../media/form_images/"+target.id+"_image.png");
+					$("#tag_label").html(target.id);
+					$("#tag_label").css("opacity", "100");
+				});
+		
+				
+				form = document.getElementById('form');
+				form.addEventListener('submit', function(event) {
+					$("#itineraries").html('<i class="fa-solid fa-ellipsis" style="color:#cad2d3"></i>');
+					event.preventDefault();
+					event.stopPropagation();
+					formData = new FormData(this);
+					const data = [...formData.entries()];
+					const query_string = data.map(x => `${encodeURIComponent(x[0])}=${encodeURIComponent(x[1])}`).join('&');
+					get_url = base_url+ '/api/itineraries?'+ query_string + `&api_key=${api_key}`;
+					console.log(get_url);
+					$.get(get_url, (res)=>{			
+						res.data.forEach((itinerary, i) =>{ 
+							title = itinerary.title;
+							author = itinerary.author;
+							tags = itinerary.tags;
+							html_tags = "";
+							for (const tag of tags) { 
+								if(tag=="architecture") html_tags+='<i class="fa-solid tag_color_architecture fa-archway" style="padding-left:3px"></i>';
+								else if(tag=="cultural") html_tags+='<i class="fa-solid fa-book-open tag_color_cultural" style="padding-left:3px"></i>'; 
+								else if(tag=="foods") html_tags+='<i class="fa-solid fa-utensils tag_color_foods" style="padding-left:3px"></i>';
+								else if(tag=="hotel") html_tags+='<i class="fa-solid fa-bed tag_color_hotel" style="padding-left:3px"></i>'; 
+								else if(tag=="natural") html_tags+='<i class="fa-solid fa-tree tag_color_natural" style="padding-left:3px"></i>'; 
+								else if(tag=="religion") html_tags+='<i class="fa-solid fa-hands-praying tag_color_religion" style="padding-left:3px"></i>'; 
+							}
+							$("#itineraries").append(`<div class="d-flex card_itinerary p-2 justify-content-between m-3">
+							<div class="d-flex text-start align-items-center mx-3">
+								<div>
+									<h5 class="card-title small m-0 mb-2">${title}</h5>
+									<p class="card-text small">by: ${author}</p>
+								</div>
+							</div>
+							<div class="text-end align-items-end d-flex flex-column p-2 mx-3"  >
+									<a href="${base_url + '/planner?id=' + itinerary.id}"><button class="input_style_small mx-2 mb-2">View</button></a>
+									<div>
+										${html_tags}   
+									</div>                                            
+							</div>
+						</div>`)
+						});
+					});
+				});
+			});		
+			</script>
     </body>
 </html>
