--- a/node/src/views/home.ejs
+++ b/node/src/views/home.ejs
@@ -38,14 +38,16 @@
                 <ul class="navbar-nav px-5">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
-                        <ul class="dropdown-menu mt-2">
+                        <ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
                             <li>
                                 <div class="dropdown-item card bg-dark text-white">
                                     <div class="card-header">
                                         <h4 class="card-title"><%=username%></h4>
                                         <p class="card-text"><%=email%></p>
+                                        <p class="card-text"><%=api_key%></p>
                                     </div>
                                     <div class="card-body d-grid gap-3">
+                                        <button type="button" class="btn btn-primary input_style_sm btn-block">Settings</button>
                                         <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
                                     </div>
                                 </div>
