--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -36,7 +36,7 @@
                 </li>
             </ul>
             <ul class="navbar-nav px-5">
-                <li class="nav-item dropdown">
+                <li id="dropDown" class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
                     <ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
                         <li>
@@ -45,8 +45,8 @@
                                     <h4 class="card-title"><%=username%></h4>
                                     <script>
                                         var username = "<%=username%>"
-                                     </script>
-                                    <p class="card-text"><%=email%></p>
+                                    </script>
+                                    <p id="email" class="card-text hidden" onclick="blurText(this)"><%=email%></p>
                                 </div>
                                 <div class="card-body d-grid gap-3">
                                     <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
