riorganizzate le variabili d'ambiente

--- a/node/src/views/planner.ejs
+++ b/node/src/views/planner.ejs
@@ -126,6 +126,10 @@
                 <%}}%></div>  
             </div>
     </div>
+    <script>
+        var OpenTripMapKey = "<%=process.env.OPENTRIPMAP_KEY%>";
+        var mapBoxAT = "<%=process.env.MAPBOX_KEY%>";
+    </script>
     <script src="../js/app.js"></script>
 </body>
 </html>
