--- a/nginx/static/styles/style_form.css
+++ b/nginx/static/styles/style_form.css
@@ -176,6 +176,20 @@ html, body{
   color: #adb5bd;
 }
 
+.custscroll::-webkit-scrollbar {
+  width: 10px;
+}
+.custscroll::-webkit-scrollbar-track {
+  background: none; 
+}
+.custscroll::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 5px;
+}
+.custscroll:-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+
 .card_menu{
   min-width: 300px;
   max-width: 300px;
