--- a/node/src/views/home.ejs
+++ b/node/src/views/home.ejs
@@ -35,19 +35,22 @@
             <div class="container-fluid">
                 <a class="navbar-brand px-5 text-white" href="">Trip-Planner</a>
                 <%if(authenticated){%>
-                <ul class="navbar-nav px-5">
+                <ul class="navbar-nav px-5 align-items-center">
+                    <li class="nav-item mx-5">
+                        <a class="nav-link text-white" href="./apidoc">API</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white px-5" href="" role="button" data-bs-toggle="dropdown"> <%=username%></a>
                         <ul class="dropdown-menu mt-2" style="background-color: rgb(50, 50, 50, 0.3);">
                             <li>
                                 <div class="dropdown-item card bg-dark text-white">
                                     <div class="card-header">
-                                        <h4 class="card-title"><%=username%></h4>
-                                        <p class="card-text"><%=email%></p>
-                                        <p id="apikey" class="card-text hidden" onclick="blurText(this)"><%=api_key%></p>
+                                        <h4 class="card-title custscroll"><%=username%></h4>
+                                        <p class="card-text custscroll"><%=email%></p>
+                                        <p style="font-size: 12px; margin-bottom: 2px">api key:</p>
+                                        <p id="apikey" class="card-text hidden custscroll" onclick="blurText(this)"><%=api_key%></p>
                                     </div>
                                     <div class="card-body d-grid gap-3">
-                                        <button type="button" class="btn btn-primary input_style_sm btn-block">Settings</button>
                                         <button type="button" id="logout_button" class="btn btn-danger input_style_sm btn-block">Log out</button>
                                     </div>
                                 </div>
@@ -57,7 +60,10 @@
                 </ul>
                 <%}else{%>
                 <div class="mx-5">
-                    <ul class="navbar-nav gap-2">
+                    <ul class="navbar-nav align-items-center gap-2">
+                        <li class="nav-item mx-5">
+                            <a class="nav-link text-white" href="./apidoc">API</a>
+                        </li>
                         <li class="nav-item">
                             <button id="login_button_sm" class="input_style_sm btn btn-primary">Log in</button>
                         </li>
